[package]
name = "essa-function-scheduler"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
wasmtime = "0.37.0"
wasmtime-wasi = "0.37.0"
argh = "0.1.6"
# keep in sync with anna-rs
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "d4b00540cd0faa6ce585e11862cf9740ca226489" }
essa-common = { path = "../common" }
smol = "1.2.5"
futures = "0.3.17"
anna-api = { git = "https://github.com/essa-project/anna-rs.git" }
