[package]
name = "essa-function-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
wasmtime = "9.0.3"
wasmtime-wasi = "9.0.3"
argh = "0.1.6"
zenoh = "0.7.0-rc"
essa-common = { path = "../common" }
smol = "1.2.5"
futures = "0.3.17"
anna-api = { path = "../anna-rs/api" }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
