[package]
name = "essa-test-function"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
essa-api = { path = "../api" }
essa-common = { path = "../common" }
anna-api = { path = "../anna-rs/api" }
